# rust-hub75-matrix

./: CHANGELOG.md  Cargo.toml  README.md  build.rs
docs/superpowers/plans/: 2026-06-22-gif-example-implementation.md
docs/superpowers/specs/: 2026-06-22-gif-example-design.md
examples/: animation.rs  show_image.rs  show_png.rs  solid_color.rs
native/: bridge.cc  bridge.h
src/: config.rs  error.rs  ffi.rs  lib.rs  matrix.rs
tests/: buffer_validation.rs  config.rs
