[package]
name = "rust-hub75-matrix"
version = "0.1.0"
edition = "2024"
build = "build.rs"
license = "GPL-2.0-or-later"
description = "Safe Rust RGB8 frame output for HUB75 matrices via rpi-rgb-led-matrix"
repository = "https://github.com/hzeller/rpi-rgb-led-matrix"

[dependencies]
thiserror = "2"

[build-dependencies]
cc = "1"

[dev-dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
ctrlc = "3"
image = { version = "0.25", default-features = false, features = ["png"] }
